--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Cabecera 1</h1>
 
-<h2>This is heading 2</h2>
+<h2>Prueba de modificacion</h2>
 <h3>This is heading 3</h3>
 
 <p>My first paragraph.</p>
