--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Cabecera 1</h1>
 
 <h2>Prueba de modificacion</h2>
-<h3>This is heading 3</h3>
+<h3>Prueba de modificacion 2</h3>
 
 <p>My first paragraph.</p>
 
